--- a/colorGame.css
+++ b/colorGame.css
@@ -16,16 +16,44 @@ h1{
     padding: 20px 0;
 }
 
+button{
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all 0.3s;
+    outline: none;
+}
+
+button:hover{
+    color: white;
+    background: steelblue;
+}
+
 .square{
     width: 30%;
     background: purple;
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 15%;
+    transition: background 0.6s;
+    -webkit-transition: background 0.6s;
+    
 }
 
 .selected{
-    background: blue;
+    color: white;
+    background: steelblue;
+}
+
+#message{
+    display: inline-block;
+    width: 20%;
 }
 
 #container{
